[package]
name = "np-setup"
version = "0.0.1"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "Placeholder"
repository = "https://github.com/shellrow/np-setup"
readme = "README.md"
license = "MIT"

[dependencies]
sha2 = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
#tokio = { version = "1", features = ["full"] }
privilege = "0.3.0"
