[package]
name = "np-setup"
version = "0.0.1"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "Placeholder"
repository = "https://github.com/shellrow/np-setup"
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
#tokio = { version = "1", features = ["full"] }
privilege = "0.3"
inquire = "0.6"
home = "0.5"
zip = "0.6"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"
